--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blibioteca balan</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="reset.css">
 </head>
 <body>
-    <h1>Titulo</h1>
-    <h2>qauql quer cois q eu quiser</h2>
+    <h1>blibioteca balan</h1>
+
+    <header class="cabecalho">
+        <span class="cabecalho__menu-hamburguer">Menu</span>
+        <img src="imagens/Logo.svg" alt="Logotipo da Biblioteca Start">
+        <a href="#"><img src="imagens/Favoritos.svg" alt="Meus favoritos"></a>
+        <a href="#"><img src="imagens/Emprestimos.svg" alt="Meus Empréstimos"></a>
+        <a href="#"><img src="imagens/Usuario.svg" alt="Meu Perfil"></a>
+    </header>
 </body>
 </html>
