--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Blibioteca balan</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="header.css">
 </head>
 <body>
     <h1>blibioteca balan</h1>
