--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="header.css">
+  <link rel="stylesheet" href="styles/header.css">
 </head>
 <body>
     <h1>blibioteca balan</h1>
