agora sim o fim

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="header.css">
   <link rel="stylesheet" href="styles/header.css">
   <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <h1>blibioteca balan</h1>
